--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: orchid;
     margin-top: 75px;
 }
 
@@ -17,6 +17,6 @@ body {
 }
 
 .img-medium {
-    height: 400px;
+    height: 300px;
 }
 
