[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("../../media/examples/lizard.png");
     font-family: sans-serif;
-    background-color: orchid;
+   /* background-color: orchid; */
     margin-top: 75px;
 }
 
